# percona-mongot

./: .bazelrc  .gitignore  BUILD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md
.github/workflows/: unittests.yml
bazel/: BUILD  bazel_deps.bzl  init_bazel_deps.bzl  repos.bzl
bazel/buildifier/: buildifier.MODULE.bazel
bazel/cc/: bazel_deps.bzl  cc.MODULE.bazel  extensions.bzl  repos.bzl
bazel/common/: common.MODULE.bazel
bazel/common/patches/: bazel_rules_mongo-poetry-bzlmod.patch
bazel/config/: BUILD
bazel/docker/: BUILD  docker.MODULE.bazel
bazel/go/: go.MODULE.bazel
bazel/java/: BUILD  deps.bzl  extensions.bzl  java.MODULE.bazel  jdk_config.bzl  lucene_fork_pin_info.json  maven.MODULE.bazel  maven_pin_info.json  maven_search_query.MODULE.bazel  maven_search_systems.MODULE.bazel  netty_tcnative.bzl  package.bzl  proto_bson.bzl  search_query_deps.bzl  systems_deps.bzl  test.bzl
bazel/java/generated_pom/: pom.xml
bazel/javascript/: javascript.MODULE.bazel
bazel/proto/: proto.MODULE.bazel
bazel/python/: BUILD  init_bazel_deps.bzl  python.MODULE.bazel  requirements.in  requirements_lock.txt
bazel/releases/: extensions.bzl  releases.MODULE.bazel
bazel/rust/: rust.MODULE.bazel
bazel/shell/: shell.MODULE.bazel
bazel/tools/: extensions.bzl  tools.MODULE.bazel
community-quick-start/: Dockerfile.local  mongot.conf
conf/checkstyle/: checkstyle-suppressions.xml  mongot.xml
deploy/: BUILD  def.bzl
deploy/community-resources/: config.default.yml  mongot
deploy/community-resources/LICENSE/: THIRD_PARTY_NOTICES.txt
percona-packaging/: .gitignore
percona-packaging/conf/: mongot-wrapper.sh  mongot.env  mongot.logrotate  mongot.service  mongot.yml
percona-packaging/debian/: changelog  control  copyright  dirs  install  postinst  preinst  rules
percona-packaging/rpm/: percona-search-mongodb.spec  percona-server-mongodb-mongot.spec
percona-packaging/scripts/: mongot_builder.sh
scripts/ci/: affected_tests.py
scripts/java/: update-dependencies.sh
scripts/java/pom/: BUILD
scripts/perf/: generate_ground_truth.py
scripts/perf/pprof/: BUILD  parse_pprof.py  profile.proto
scripts/python/: BUILD
scripts/sysroots/: generate_sysroot.sh
scripts/tests/: BUILD
scripts/tests/community/: BUILD
scripts/tools/testing/: BUILD  update_json_tests_explain.py
src/main/c/: BUILD  mongot_vecsim.c
src/main/java/com/xgen/errorprone/: BUILD
src/main/java/com/xgen/mongot/catalogservice/: BUILD  CatalogAccessGuard.java  DefaultMetadataService.java  MetadataClient.java  MongodTopologyMonitor.java  TopologyMismatchException.java
src/main/java/com/xgen/mongot/community/: BUILD  MongotCommunity.java
src/main/java/com/xgen/mongot/cursor/: CursorFactory.java  CursorQuery.java  IndexCursorManager.java  MongotCursorManager.java
src/main/java/com/xgen/mongot/embedding/: AutoEmbedFieldMapping.java  BUILD  (+2 more)
src/main/java/com/xgen/mongot/embedding/mongodb/: BUILD.bazel  MaterializedViewCollectionResolver.java
src/main/java/com/xgen/mongot/embedding/mongodb/common/: AutoEmbeddingMongoClient.java  BUILD
src/main/java/com/xgen/mongot/embedding/mongodb/leasing/: BUILD  DynamicLeaderLeaseManager.java  Lease.java  LeaseManager.java  LeaseManagerOpsCommands.java  StaticLeaderLeaseManager.java  StatusResolutionUtils.java
src/main/java/com/xgen/mongot/embedding/providers/configs/: BUILD.bazel  EmbeddingConfigFactory.java  EmbeddingModelCatalog.java  EmbeddingModelConfig.java  EmbeddingServiceConfig.java  OpenAiApiSchema.java
src/main/java/com/xgen/mongot/embedding/utils/: AutoEmbedFieldMappingCreator.java  AutoEmbeddingDocumentUtils.java  AutoEmbeddingIndexDefinitionUtils.java  BUILD.bazel  CollectFieldValueDocumentHandler.java  CollectFieldValueHandler.java  CollectVectorTextStringsDocumentHandler.java  CollectVectorTextStringsFieldValueHandler.java  MaterializedViewDocumentHandler.java  MaterializedViewFieldValueHandler.java  MongoClientOperationExecutor.java
src/main/java/com/xgen/mongot/index/lucene/codec/flat/: BUILD.bazel  BinaryQuantizedFlatVectorsFormat.java  FlatBitVectorsFormat.java  FlatVectorsWriterDecorator.java  Float32AndByteFlatVectorsFormat.java  FullScanFlatVectorsReaderDecorator.java  ScalarQuantizedFlatVectorsFormat.java
src/main/java/com/xgen/testing/: BsonDeserializationTestSuite.java
src/main/resources/config/community/: BUILD  embedding-service-configs.yml
src/proto/searchenvoy/: BUILD
src/test/unit/java/com/xgen/mongot/embedding/: BUILD.bazel  SearchIndexAutoEmbedFieldMappingTest.java  VectorAutoEmbedFieldMappingTest.java
src/test/unit/java/com/xgen/mongot/embedding/mongodb/: BUILD.bazel  MaterializedViewCollectionResolverTest.java
src/test/unit/java/com/xgen/mongot/embedding/mongodb/common/: AutoEmbeddingMongoClientTest.java  BUILD
src/test/unit/java/com/xgen/mongot/embedding/mongodb/leasing/: BUILD.bazel  DynamicLeaderLeaseManagerTest.java  LeaseTest.java  StaticLeaderLeaseManagerTest.java  StatusResolutionUtilsTest.java
src/test/unit/java/com/xgen/mongot/embedding/providers/clients/: BUILD  EmbeddingClientFactoryTest.java  OpenAiCompatClientTest.java  VoyageClientTest.java
src/test/unit/java/com/xgen/mongot/embedding/providers/config/: BUILD  EmbeddingModelConfigTest.java  OpenAiApiSchemaTest.java  VoyageModelConfigTest.java
src/test/unit/java/com/xgen/mongot/embedding/utils/: AutoEmbedFieldMappingCreatorTest.java  AutoEmbeddingDocumentUtilsTest.java  AutoEmbeddingIndexDefinitionUtilsTest.java  BUILD.bazel  MongoClientOperationExecutorTest.java
src/test/unit/resources/featureflag/: featureFlagsDeserialization.json  featureFlagsSerialization.json
src/test/unit/resources/index/: index-generation-metrics-serialization.json  index-metrics-serialization.json  indexing-metrics-serialization.json
src/test/unit/resources/index/definition/: search-index-deserialization.json  vector-index-deserialization.json  vector-index-serialization.json
src/test/unit/resources/index/query/: approximate-vector-search-deserialization.json  exact-vector-search-deserialization.json
(+800 files in other folders)
