"""MODULE.bazel for Go + Gazelle.

Gazelle is used in this repo only to generate Java rules (via contrib_rules_jvm)
and proto/buf rules. No Go targets exist. rules_go is still pulled because
gazelle depends on it transitively.
"""

bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")
use_repo(go_sdk, "go_default_sdk")
