load("//bazel/java:package.bzl", "java_library")

java_library(
    name = "utils",
    srcs = [
        "AutoEmbedFieldMappingCreator.java",
        "AutoEmbeddingDocumentUtils.java",
        "AutoEmbeddingIndexDefinitionUtils.java",
        "CollectFieldValueDocumentHandler.java",
        "CollectFieldValueHandler.java",
        "CollectVectorTextStringsDocumentHandler.java",
        "CollectVectorTextStringsFieldValueHandler.java",
        "MaterializedViewDocumentHandler.java",
        "MaterializedViewFieldValueHandler.java",
        "MongoClientOperationExecutor.java",
    ],
    visibility = ["//:__subpackages__"],
    exports = [
        "//src/main/java/com/xgen/mongot/embedding",
        "//src/main/java/com/xgen/mongot/index",
        "//src/main/java/com/xgen/mongot/index/definition",
        "//src/main/java/com/xgen/mongot/index/ingestion/handlers",
        "//src/main/java/com/xgen/mongot/util",
        "@maven//:org_mongodb_bson",
    ],
    deps = [
        "//src/main/java/com/xgen/mongot/embedding",
        "//src/main/java/com/xgen/mongot/embedding/config",
        "//src/main/java/com/xgen/mongot/embedding/exceptions",
        "//src/main/java/com/xgen/mongot/index",
        "//src/main/java/com/xgen/mongot/index/definition",
        "//src/main/java/com/xgen/mongot/index/ingestion",
        "//src/main/java/com/xgen/mongot/index/ingestion/handlers",
        "//src/main/java/com/xgen/mongot/metrics",
        "//src/main/java/com/xgen/mongot/util",
        "//src/main/java/com/xgen/mongot/util/bson",
        "//src/main/java/com/xgen/mongot/util/mongodb",
        "//src/main/java/com/xgen/mongot/util/retry",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:net_jodah_failsafe",
        "@maven//:org_apache_commons_commons_collections4",
        "@maven//:org_mongodb_bson",
        "@maven//:org_mongodb_mongodb_driver_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
