load("//bazel/java:package.bzl", "java_library")

java_library(
    name = "configs",
    srcs = [
        "EmbeddingConfigFactory.java",
        "EmbeddingModelCatalog.java",
        "EmbeddingModelConfig.java",
        "EmbeddingServiceConfig.java",
        "OpenAiApiSchema.java",
        "VoyageApiSchema.java",
    ],
    visibility = ["//:__subpackages__"],
    exports = [
        "//src/main/java/com/xgen/mongot/util/bson",
        "@maven//:org_mongodb_bson",
    ],
    deps = [
        "//src/main/java/com/xgen/mongot/embedding/exceptions",
        "//src/main/java/com/xgen/mongot/index/definition/quantization",
        "//src/main/java/com/xgen/mongot/util",
        "//src/main/java/com/xgen/mongot/util/bson",
        "//src/main/java/com/xgen/mongot/util/bson/parser",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:org_mongodb_bson",
    ],
)
