load("//bazel/java:package.bzl", "java_library")

java_library(
    name = "flat",
    srcs = [
        "BinaryQuantizedFlatVectorsFormat.java",
        "FlatBitVectorsFormat.java",
        "FlatVectorsWriterDecorator.java",
        "Float32AndByteFlatVectorsFormat.java",
        "FullScanFlatVectorsReaderDecorator.java",
        "ScalarQuantizedFlatVectorsFormat.java",
    ],
    visibility = ["//:__subpackages__"],
    exports = ["@maven//:org_apache_lucene_lucene_core"],
    deps = [
        "//src/main/java/com/xgen/mongot/index/definition",
        "//src/main/java/com/xgen/mongot/index/lucene/quantization",
        "@maven//:com_google_auto_service_auto_service_annotations",
        "@maven//:org_apache_lucene_lucene_core",
        "@maven//:org_mongodb_mongodb_driver_core",
    ],
)
